profile settings page updated

--- a/app/app/static/css/profile_settings.css
+++ b/app/app/static/css/profile_settings.css
@@ -113,3 +113,11 @@ select:focus {
         line-height: 18px
     }
 }
+
+.buttons a{
+    color: #007bff !important;
+}
+
+.buttons a:hover{
+    color: #fff !important;
+}
