--- a/app/templates/pages/user_profile.html
+++ b/app/templates/pages/user_profile.html
@@ -73,22 +73,22 @@
          <div class="container">
             <div class="col-md-12">
                {% for product in products %}
-                     <div class="products-i">
-                        <a href="{% url 'product-detail' product.slug %}" class="products-link mb-2">
-                            <div class="card">
-                                <div class="products-top">
-                                    <img class="card-img-top" src="{{ product.image.url }}" alt="Card image cap">
-                                    <div class="products-price-container">
-                                        <div class="products-price">
-                                            <span class="price-val">{{ product.price }} AZN</span>
-                                        </div>
-                                    </div>
-                                </div>
-                                <div class="products-name">{{ product.title }}</div>
-                                <div class="products-created">{{ product.city.name }}, {{ product.is_past_due }} {{ product.updated_at|date:"H:i" }} </div>
-                            </div>
-                        </a>
-                     </div>
+                  <div class="products-i">
+                     <a href="{% url 'product-detail' product.slug %}" class="products-link mb-2">
+                         <div class="card_">
+                             <div class="products-top">
+                                  <img class="card-img-top" src="{{ product.image.url }}" alt="Card image cap">
+                             </div>
+                             <div class="products-price-container">
+                                 <div class="products-price">
+                                     <span class="price-val">{{ product.price }} AZN</span>
+                                 </div>
+                             </div>
+                             <div class="products-name">{{ product.title }} </div>
+                             <div class="products-created">{{ product.city.name }}, {{ product.is_past_due }}, {{ product.updated_at|time:"H:i" }}</div>
+                         </div>
+                     </a>
+                  </div>
                {% endfor %}
             </div>
          </div>
