--- a/app/templates/includes/search_form.html
+++ b/app/templates/includes/search_form.html
@@ -1,4 +1,4 @@
-<form id="searchProductForm" class="form-inline pt-4">
+<form id="searchProductForm" class="form-inline pt-4"  style="{% if 'elanlar' in request.path %} padding-bottom: 1.3rem; {% endif %}">
     <div class="col-md-12">
         <div class="row">
             <div class="col-md-6">
