--- a/app/templates/pages/product_detail.html
+++ b/app/templates/pages/product_detail.html
@@ -69,20 +69,13 @@
                 class="sr-only">Close</span>
             </button>
           </div>
-          {% for image in related_products%}
           <div class="modal-body">
             <img id="image-gallery-image" class="img-responsive col-md-12" src="{{product.image.url}}">
-          </div>         
-          {%endfor%}
+            <img id="image-gallery-image" class="img-responsive col-md-12" src="{{product.image.url}}">
+          </div> 
+      
 
           <div class="modal-footer">
-            <button type="button" class="btn btn-secondary float-left" id="show-previous-image"><i
-                class="fa fa-arrow-left"></i>
-            </button>
-
-            <button type="button" id="show-next-image" class="btn btn-secondary float-right"><i
-                class="fa fa-arrow-right"></i>
-            </button>
           </div>
         </div>
       </div>
